--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="content">
         <h4>Jag fyller <span>5</span> år snart och vill gärna fira det med mina bästa kompisar  <br>
         Så mellan 13:00 och 16:00 den 23/4 så är det äntligen kalasdax 😀</h4>
-        <p>Jag tänkte ha ett tema: Pyjamashjältarna och sjöjungfru</p>
+        <p>Jag tänkte ha två teman: Pyjamashjältarna och sjöjungfru</p>
     </div>
     <div class="game">
         <ul>
