--- a/index.html
+++ b/index.html
@@ -9,47 +9,33 @@
     <title>Viktoria 5 år kompisar</title>
 </head>
 <body>
-    <h1>Välkommen till mitt kalas!</h1>
+    <h1>Välkommen på vårat kalas!</h1>
     <div class="images">
         <div class="pyjamas"></div>
         <div class="ballons"></div></div>
     </div>
     <div class="content">
-        <h4>Jag fyller <span>5</span> år snart och vill gärna fira det med mina bästa kompisar  <br>
-        Så mellan 13:00 och 16:00 den 23/4 så är det äntligen kalasdax 😀</h4>
-        <p>Jag tänkte ha två teman: Pyjamashjältarna och sjöjungfru</p>
+        <h4>Vi fyller/har fyllt  6 år och vill gärna fira det med våra bästa vänner  <br>
+        så gör er beredda på ett jättekalas.</h4>
     </div>
-    <div class="game">
-        <ul>
-            <h4>Det utlovas:</h4>
-            <li>Fiskedamm</li>
-            <li>Ansiktsmålning</li>
-            <li>Mycket lek</li>
-        </ul>
-        <ul>
-            <h4>Det här bjuds det på:</h4>
-            <li>Kokekorv</li>
-            <li>Tårta</li>
-        </ol>
-    </div>
-    <div class="address">
-        <h4>Min adress är:</h4>
-        <p>Krattskogsvägen 55</p>
-        <p>Osa senast 16/4</p>
-    </div>
+    <ul id="place">
+        <li>När?: 11/5</li>
+        <li>Var?: Barnens lekpalats, gamlestan, dicorummet</li>
+        <li>Kl: 11:00-14:00</li>
+        <li>Osa senast 5/5</li>
+    </ul>
     <div class="time"></div>
     <div class="changeBtn"><button>Ändra svar</button></div>
     <div class="formel">
         <form id="formPost">
             <label>Namn*</label>
             <input type="text" id="name" name="name" placeholder="Barnets namn" required>
-            <label>Välj*</label>
+            <label >Välj *</label>
             <select>
-                <option >--Välj ett alternativ--</option>
                 <option id="true" value="true">Kommer</option>
                 <option value="false">Kommer inte</option>
             </select>
-            <label>Skriv</label>
+            <label>Lämna ett meddelande</label>
             <textarea id="content" name="content" rows="5" cols="10" placeholder="Skriv gärna något gulligt om mig ❤️"></textarea>
             <button class="answearBtn">Svara</button>
             <p>*Obligatoriskt</p>
