--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="style.css">
-    <title>Viktoria 5 år kompisar</title>
+    <title>Viktoria och Seline</title>
 </head>
 <body>
     <h1>Välkommen på vårat kalas!</h1>
