--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="ballons"></div></div>
     </div>
     <div class="content">
-        <h4>Vi fyller/har fyllt  6 år och vill gärna fira det med våra bästa vänner  <br>
+        <h4>Vi fyller/har fyllt  6 år och vill gärna fira det med våra bästa vänner  😀 <br>
         så gör er beredda på ett jättekalas.</h4>
     </div>
     <ul id="place">
