--- a/index.html
+++ b/index.html
@@ -9,19 +9,18 @@
     <title>Viktoria och Seline</title>
 </head>
 <body>
-    <h1>Välkommen på vårat kalas!</h1>
+    <h1>Välkommen på dubbelkalas!</h1>
     <div class="images">
         <div class="pyjamas"></div>
         <div class="ballons"></div></div>
     </div>
     <div class="content">
-        <h4>Vi fyller/har fyllt  6 år och vill gärna fira det med våra bästa vänner  😀 <br>
-        så gör er beredda på ett jättekalas.</h4>
+        <h4>Viktoria och Seline vill gärna bjuda in er till deras kalas på barnpalatset!</h4>
     </div>
     <ul id="place">
-        <li>När?: 11/5</li>
-        <li>Var?: Barnens lekpalats, gamlestan, dicorummet</li>
-        <li>Kl: 11:00-14:00</li>
+        <li>Datum: 11/5 </li>
+        <li>Tid:11:00-14:00</li>
+        <li>Var: Barnpalatset, gamlestan, discorummet</li>
         <li>Osa senast 5/5</li>
     </ul>
     <div class="time"></div>
@@ -30,7 +29,7 @@
         <form id="formPost">
             <label>Namn*</label>
             <input type="text" id="name" name="name" placeholder="Barnets namn" required>
-            <label >Välj *</label>
+            <label >Kommer/kommer inte *</label>
             <select>
                 <option id="true" value="true">Kommer</option>
                 <option value="false">Kommer inte</option>
@@ -39,6 +38,7 @@
             <textarea id="content" name="content" rows="5" cols="10" placeholder="Skriv gärna något gulligt om mig ❤️"></textarea>
             <button class="answearBtn">Svara</button>
             <p>*Obligatoriskt</p>
+            <a href="https://www.barnpalatset.com/">Länk till barnpalatset</a>
         </form>
     </div>
 </body>
